--- a/Elementor/menu.css
+++ b/Elementor/menu.css
@@ -1,1 +1,31 @@
+:root {
+  --main-bg-color: #484848;
+  --main-txt-color: white; 
+}
 
+.primaryMenu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: var(--main-bg-color);
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.primaryMenu li {
+  display: inline;
+}
+.primaryMenu li a {
+  display: inline-block;
+  color: var(--main-txt-color);
+  font-weight: 400;
+  font-size: 1.125rem;
+  text-align: center;
+  margin-left: 8.25px;
+  margin-right: 8.25px;
+  text-decoration: none;
+}
+.primaryMenu li a:hover {
+  border-bottom: var(--main-txt-color) 1px solid;
+}
